--- a/index.html
+++ b/index.html
@@ -2,29 +2,15 @@
 <head>
 <link rel="stylesheet" type="text/css" href="master.css">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
 <body>
     
-<div class = 'prof-box '>
-    <img src="/home/shaashwatlobnikki/Desktop/Resume/images/profile_picture.jpeg" class="prof-pic">
 
-    <h1>Shaashwat Agrawal</h1>
-    <h4>Core committee member of Robovitics| Project Lead</h4>
-
-    <div class="line-break"></div>
-
-    <p>
-    Hey! I am Shaashwat, a hardworking and enthusiastic techie. I love to explore various fields of computer science, from IoT to AI and integrate their applications into my projects and ideas. 
-    Also, if you come up with awesome project ideas, please open-source them.
-    </p>
-
-    <div class="social-icons">
-       <a href="www.facebook.com" target="_blank"> <i class="fa fa-facebook-official"></i></a>
-        <i class="fa fa-twitter-square"></i>
-        <a href="https://www.instagram.com/__shaashwat__/" target="_blank"><i class="fa fa-instagram"></i></a>
-    </div>
-</div>
 
 
 </body>
