--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 <body>
     
-
+<!-----Header Section----->
+<section id="header">
+    <div class="container text-center">
+        <div class="user-box">
+            <img src="images/profile_picture.jpeg"  >
+            <h1>Shaashwat Agrawal</h1>
+            <p>AI Enthusiast | Python Developer </p>
+        </div>
+    </div>
+    <div class="scroll-btn">
+        <div class="scroll-bar"><a href=""><span>   </span></a></div>
+    </div>
+</section>
 
 
 </body>
