--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -24,7 +25,53 @@
     </div>
 </section>
 
+<!---------User - Info Section----------->
 
-</body>
+<section id="user-info">
+    <div class="nav-bar">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">ABOUT ME</a>
+                </li>
+                <li class="nav -item">
+                  <a class="nav-link" href="#">RESUME</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">BLOGS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">CONTACT</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </div>
 
-</html>
+
+      <!--------About---------->
+
+      <div class="about container" id="about">
+          <div class="row">
+              <div class="col-md-6 text-centre">
+                  <img src="images/profile_picture.jpeg" class="profile-img">
+              </div>
+              <div class="col-md-6">
+                  <h3>WHO AM I?</h3>
+                  <p>Hey! I am Shaashwat, a hardworking and enthusiastic techie. 
+                      I love to explore various fields of computer science, from IoT to AI and integrate their applications into my projects and ideas. 
+                      Also, if you come up with awesome project ideas, please open-source them.</p>
+              </div>
+
+          </div>   
