basic resume timeline

--- a/index.html
+++ b/index.html
@@ -67,11 +67,97 @@
               <div class="col-md-6 text-centre">
                   <img src="images/profile_picture.jpeg" class="profile-img">
               </div>
-              <div class="col-md-6">
+              <div class="col-lg-6">
                   <h3>WHO AM I?</h3>
                   <p>Hey! I am Shaashwat, a hardworking and enthusiastic techie. 
                       I love to explore various fields of computer science, from IoT to AI and integrate their applications into my projects and ideas. 
-                      Also, if you come up with awesome project ideas, please open-source them.</p>
+                      Also, if you come up with awesome project ideas, please open-source them.
+                  </p>
+                  <div class="skills-bar">
+                      <p>Python</p>
+                      <div class="progress">
+                          <div class="progress-bar" style="width: 80%;">80% </div>
+                      </div>
+                      <p>Deep Learning</p>
+                      <div class="progress">
+                          <div class="progress-bar" style="width: 50%;">50% </div>
+                      </div>
+                      <p>Genetic Algorithm</p>
+                      <div class="progress">
+                          <div class="progress-bar" style="width: 40%;">40% </div>
+                      </div>
+                      <p>Wordpress</p>
+                      <div class="progress">
+                          <div class="progress-bar" style="width: 60%;">60% </div>
+                      </div>
+                  </div>
               </div>
 
           </div>   
+
+          <!------------------Resume--------------->
+    
+          <div class="resume" id="resume">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3 class="text-centre">My Experiences</h3>
+                  <ul class="timeline">
+                    <li>
+                      <h4><span>2020 - </span> Technical Writer and Intern in IOTEDU</h4>
+                      <p>IOTEDU is an Internet of Things blogging website.From cloud compputing to raspberry pi all tutorials are available. <br>
+                      <b>Organization</b> - Robovitics<br>
+                      <b>Duration</b> - 2 months [ April,2020 to June,2020] <br>
+                    </p>
+                    </li>
+                    <li>
+                      <h4><span>2019 - </span> Project Lead of Robovitics</h4>
+                      <p>The robotics club of VIT <br>
+                      <b>Organization</b> - Robovitics<br>  
+                      <b>Duration</b> - 1yr [2019 to 2020] <br>
+                    </p>
+                    </li>
+                    <li>
+                      <h4><span>2018 - </span> Core Committee Member of Robovitics</h4>
+                      <p>The robotics club of VIT <br>
+                      <b>Organization</b> - Robovitics<br>
+                      <b>Duration</b> - 1yr [2018 to 2019] <br>
+                    </p>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="col-md-6">
+                  <h3 class="text-centre">My Experiences</h3>
+                  <ul class="timeline">
+                    <li>
+                      <h4><span>2020 - </span> Bachelor of technology in CSE </h4>
+                      <p> <br>
+                      <b>Institute</b> -The Vellore Institute of Technology<br>
+                      <b>Duration</b> - 2yrs [2018 to 2020] <br>
+                      <b>Grades</b> - 8.84 CGPA <br>
+                    </p>
+                    </li>
+                    <li>
+                      <h4><span>2012 - </span> Student </h4>
+                      <p>One of the bests coeducational public school in India<br>
+                      <b>Institute</b> - The Assam Valley School<br>  
+                      <b>Duration</b> - 2yrs [2016 to 2018] <br>
+                      <b>Grades</b> - 96% [ISC] <br>
+                    </p>
+                    </li>
+                    <li>
+                      <h4><span>2020 - </span> Student </h4>
+                      <p>One of the bests coeducational public school in India<br>
+                      <b>Institute</b> - The Assam Valley School<br>
+                      <b>Duration</b> - 4yrs [2012 to 2016] <br>
+                      <b>Grades</b> - 95% [ICSE] <br>
+                    </p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>             
+          </div>
+
+</section>
