--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="col-md-6">
-                  <h3 class="text-centre">My Experiences</h3>
+                  <h3 class="text-centre">My Education</h3>
                   <ul class="timeline">
                     <li>
                       <h4><span>2020 - </span> Bachelor of technology in CSE </h4>
@@ -159,5 +159,84 @@
               </div>
             </div>             
           </div>
+
+
+<!---------------------------------Blogs and Articles----------------------------->
+
+<div class="blogs" id="blogs">
+  <div class="container">
+    <h1 class="text-center">My Blogs and Articles</h1>
+    <p>Easy to read and exciting articles on various IoT and Deep learning concepts.</p>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog1.png"><span>MNIST Classfier with Genetic CNN</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog2.jpg"><span>Home Controlling And Monitoring System with Raspberry Pi</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog3.png"><span>Spy Bot with Raspberry Pi</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog4.png"><span>Predictive Speech with Raspberry Pi and Deep Learning</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog5.jpg"><span>Street Lights Energy Conservation with Raspberry Pi and Camera</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+      
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog6.png"><span>Cartoonize Reality with OpenCV and Raspberry Pi</span>
+          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ 
+
+<!--------------------------------Contact-------------------------------------->
+
+<div class="contact" id="contact">
+  <div class="container text-center">
+    <h1>Contact Me</h1>
+    <p class="text-center">Special programming takes place at the site throughout our operational 
+      <br>season please check our website for more information.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fa fa-phone"></i></i>
+          <p>+1 0123456789</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fa fa-envelope"></i></i>
+          <p>shaas2000@gmail.com</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fa fa-github"></i></i>
+          <p>Shaashwat05</p>
+        </div>
+      </div>
+  </div>
+</div>
+
 
 </section>
