--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     
 <!-----Header Section----->
 <section id="header">
+  <div class="footer-social-icons">
+    <pre>
+
+</pre>
+    <ul class="social-icons" style="text-align: left;">
+        <li><a href="#" target="_blank" class="social-icon"> <i class="fa fa-facebook fa-2x text-primary mx-3"></i></a></li>
+        <li><a href="https://www.instagram.com/__shaashwat__/" target="_blank" class="social-icon"> <i class="fa fa-instagram fa-2x text-primary mx-3"></i></a></li>
+    </ul>
+    </div>
     <div class="container text-center">
         <div class="user-box">
             <img src="images/profile_picture.jpeg"  >
@@ -40,19 +49,19 @@
                   <a class="nav-link" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">ABOUT ME</a>
+                  <a class="nav-link" href="#about">ABOUT ME</a>
                 </li>
                 <li class="nav -item">
-                  <a class="nav-link" href="#">RESUME</a>
+                  <a class="nav-link" href="#resume">RESUME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">BLOGS</a>
+                  <a class="nav-link" href="#blogs">BLOGS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">CONTACT</a>
+                  <a class="nav-link" href="#contact">CONTACT</a>
                 </li>
               </ul>
             </div>
@@ -92,7 +101,7 @@
                       </div>
                   </div>
               </div>
-
+            </div>
           </div>   
 
           <!------------------Resume--------------->
@@ -178,35 +187,35 @@
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog2.jpg"><span>Home Controlling And Monitoring System with Raspberry Pi</span>
-          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+          <p>Most people have day jobs, they have to leave their homes unguarded, not only prone to intrusion or theft but also cases of fire, or simply things like water and…</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog3.png"><span>Spy Bot with Raspberry Pi</span>
-          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+          <p>Spy bot is a raspberry pi bot that uses its camera to take secret pictures, encrypt them using RSA encryption and upload it safely to a database/server. Today, security and…</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog4.png"><span>Predictive Speech with Raspberry Pi and Deep Learning</span>
-          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+          <p>You are giving a speech, get stuck in between, and don’t know what to say. No worries here is an Artificially Intelligent system that helps you out. Predictive Speech with…</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog5.jpg"><span>Street Lights Energy Conservation with Raspberry Pi and Camera</span>
-          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+          <p>According to a study, street lights consume about 19% of the world’s energy. Almost 21 TWh of energy is consumed solely by street lights. We do need street lights but…</p>
         </div>
       </div>
       
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog6.png"><span>Cartoonize Reality with OpenCV and Raspberry Pi</span>
-          <p>Everyone wanting to work on CNN starts with the MNIST handwritten data. So today we will be using genetic algorithm with CNN to classify MNIST dataset</p>
+          <p>Cartoonify Reality is an OpenCV project that uses core OpenCV functions and the K-Means clustering algorithm to perform image processing and cartoony them.This project shows how good image processing…</p>
         </div>
       </div>
     </div>
@@ -223,19 +232,21 @@
       <br>season please check our website for more information.</p>
       <div class="row">
         <div class="col-md-4">
-          <i class="fa fa-phone"></i></i>
+          <i class="fa fa-phone"></i>
           <p>+1 0123456789</p>
         </div>
         <div class="col-md-4">
-          <i class="fa fa-envelope"></i></i>
+          <i class="fa fa-envelope"></i>
           <p>shaas2000@gmail.com</p>
         </div>
         <div class="col-md-4">
-          <i class="fa fa-github"></i></i>
+          <i class="fa fa-github"></i> 
           <p>Shaashwat05</p>
         </div>
       </div>
-  </div>
+      <button type="button" class="btn btn-primary"><i class="fa fa-download"></i>Resume</button>
+      <button type="button" class="btn btn-primary"><i class="fa fa-rocket "></i>Hire Me</button>
+    </div>
 </div>
 
 
