--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
@@ -22,11 +23,16 @@
         <li><a href="https://www.instagram.com/__shaashwat__/" target="_blank" class="social-icon"> <i class="fa fa-instagram fa-2x text-primary mx-3"></i></a></li>
     </ul>
     </div>
+    <div>
+      <p>
+        "I Am imperfectly perfect in my perfectly imperfect world"
+      </p>
+    </div>
     <div class="container text-center">
         <div class="user-box">
             <img src="images/profile_picture.jpeg"  >
             <h1>Shaashwat Agrawal</h1>
-            <p>AI Enthusiast | Python Developer </p>
+            <p>AI Enthusiast | Python Developer | Technical Writer </p>
         </div>
     </div>
     <div class="scroll-btn">
@@ -74,8 +80,30 @@
       <div class="about container" id="about">
           <div class="row">
               <div class="col-md-6 text-centre">
-                  <img src="images/profile_picture.jpeg" class="profile-img">
+                <div class="w3-content w3-section">
+                  <img class="mySlides w3-animate-fading" src="images/intro1.jpg" style="width:100%">
+                  <img class="mySlides w3-animate-fading" src="images/intro2.jpg" style="width:100%">
+                  <img class="mySlides w3-animate-fading" src="images/intro3.png" style="width:100%">
+                  <img class="mySlides w3-animate-fading" src="images/blog4.png" style="width:100%">
+                </div>
+                <script>
+                  var myIndex = 0;
+                  carousel();
+                  
+                  function carousel() {
+                    var i;
+                    var x = document.getElementsByClassName("mySlides");
+                    for (i = 0; i < x.length; i++) {
+                      x[i].style.display = "none";  
+                    }
+                    myIndex++;
+                    if (myIndex > x.length) {myIndex = 1}    
+                    x[myIndex-1].style.display = "block";  
+                    setTimeout(carousel, 9000);    
+                  }
+                  </script>
               </div>
+              </body>
               <div class="col-lg-6">
                   <h3>WHO AM I?</h3>
                   <p>Hey! I am Shaashwat, a hardworking and enthusiastic techie. 
@@ -175,7 +203,9 @@
 <div class="blogs" id="blogs">
   <div class="container">
     <h1 class="text-center">My Blogs and Articles</h1>
-    <p>Easy to read and exciting articles on various IoT and Deep learning concepts.</p>
+    <div class="align">
+      <p>Easy to read and exciting articles on various IoT and Deep learning concepts.</p>
+    </div>
     <div class="row">
       <div class="col-md-4">
         <div class="blogs-box">
@@ -215,6 +245,12 @@
       <div class="col-md-4">
         <div class="blogs-box">
           <img src="images/blog6.png"><span>Cartoonize Reality with OpenCV and Raspberry Pi</span>
+          <p>Cartoonify Reality is an OpenCV project that uses core OpenCV functions and the K-Means clustering algorithm to perform image processing and cartoony them.This project shows how good image processing…</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="blogs-box">
+          <img src="images/blog7.jpg"><span>Cartoonize Reality with OpenCV and Raspberry Pi</span>
           <p>Cartoonify Reality is an OpenCV project that uses core OpenCV functions and the K-Means clustering algorithm to perform image processing and cartoony them.This project shows how good image processing…</p>
         </div>
       </div>
